<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/linear_padding"
    android:paddingBottom="@dimen/linear_padding"
    android:paddingLeft="@dimen/linear_padding"
    android:paddingRight="@dimen/linear_padding"
    tools:context="com.sara.project.Activities.ForgetPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/editText_padding"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_reset"
        android:textSize="17sp"
        android:gravity="center"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_padding"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/email_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:padding="@dimen/editText_padding"
        android:layout_margin="@dimen/editText_margin"
        android:background="@drawable/edittext"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/colorbutton"
        android:text="@string/reset_pass"
        android:textSize="25sp"
        android:layout_margin="@dimen/button_margin"
        android:textColor="@color/textColor"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/whitebutton"
        android:text="@string/back"
        android:textColor="@color/backItems"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBar_reset"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>
