<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/linear_padding"
    android:paddingLeft="@dimen/linear_padding"
    android:paddingRight="@dimen/linear_padding"
    android:paddingTop="@dimen/linear_padding"
    tools:context="com.sara.project.Activities.Login">

    <com.sara.project.CircleTransform
        android:id="@+id/img"
        android:layout_width="@dimen/layout_width_hight"
        android:layout_height="@dimen/layout_width_hight"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/faceLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/editText_margin"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/editText_margin"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/editText_padding"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editText_margin"
            android:background="@drawable/edittext"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="@dimen/editText_padding"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/password"
            android:clickable="true"
            android:padding="@dimen/image_padding"
            android:src="@drawable/show_pass" />

    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:background="@drawable/colorbutton"
        android:text="@string/login"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:clickable="true"
            android:padding="@dimen/editText_padding"
            android:text="@string/forgetPass"
            android:textColor="@color/textColor"
            android:textSize="17sp" />
        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/checkbox_margin_left"
            android:padding="@dimen/checkbox_padding"
            android:text="@string/remember"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:clickable="true"
            android:padding="@dimen/editText_padding"
            android:text="@string/newAccount"
            android:textColor="@color/textColor"
            android:textSize="17sp" />
        <Button
            android:id="@+id/signup_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_marginLeft"
            android:background="@drawable/whitebutton"
            android:text="@string/signup_loginActivity"
            android:textColor="@color/backItems"
            android:textSize="17sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/skip_marginLeft"
        android:background="@drawable/whitebutton"
        android:text="@string/skip"
        android:textColor="@color/backItems"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="@dimen/progressbar_width_hight"
        android:layout_height="@dimen/progressbar_width_hight"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/progressbar_margin"
        android:visibility="gone" />
</LinearLayout>