<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/linear_padding"
    android:paddingLeft="@dimen/linear_padding"
    android:paddingRight="@dimen/linear_padding"
    android:paddingTop="@dimen/linear_padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.sara.project.CircleTransform
        android:layout_width="@dimen/layout_width_hight"
        android:layout_height="@dimen/layout_width_hight"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/sara" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/linear_padding"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:text="@string/login_nav"
            android:textColor="@android:color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/register_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:text="@string/register_nav"
            android:textColor="@android:color/white"
            android:textSize="23sp" />
    </LinearLayout>

</LinearLayout>
